src/styles/_layout.scss
@import "~bootstrap/scss/functions.scss";
@import "~bootstrap/scss/variables.scss";
@import "~bootstrap/scss/mixins/_breakpoints.scss";
@import '_colors.scss';

$backgroundColor: #d3d3d7;
$cardColor: #bdbdc3;

/* FULLPAGE */

#root {
  background-color: $backgroundColor;
}

/* NAVIGATIONBAR */ 

.navBar {
  height: 50px;
  background-color: transparentize($color: $backgroundColor, $amount: 0);
}

.navigationBar {
  background-color: $tertiaryColor;
}

.navigationBar.collapse.show {
  background-color: $tertiaryColor;
}

/* THROUGHOUT */

.sectionContainer {
  margin: 2rem;
  padding: 100px 0;
  color: $primaryColor;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* HOME */

.homeRule {
  border-bottom: 2px solid $tertiaryColor;
  margin-bottom: 1rem;
  max-width: 500px;
}

/* ABOUT */

.aboutRule {
  border-bottom: 2px solid $tertiaryColor;
  margin-bottom: 1rem;
  max-width: 500px;
}

.aboutImage {
  box-shadow: -10px 10px 0 transparentize($color: $primaryColor, $amount: .8);
  border: 4px solid $secondaryColor;
  // width: 30%;
}

/* PORTFOLIO */

.portfolioRule {
  border-bottom: 2px solid $tertiaryColor;
  margin-bottom: 1rem;
  max-width: 500px;
}

.projectCardContainer {
  padding: 0rem;
  border-radius: 2px;
  margin: 1rem 0;
}

/* PROJECTCARD */

.project-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.project-container.card {
  background-color: $cardColor;
  margin: 1rem 0;
}

.projectDetails {
  display: flex;
  align-items: center;
}

.projectImage {
  width: 100%;
  background-position: left;
  background-size: cover;
  background-color: $secondaryColor;
  border: 3px solid $secondaryColor;
  border-radius: .25rem;

  &:hover {
    background-color: lighten($color: $backgroundColor, $amount: 35%);
    background-blend-mode: overlay;

  }
}

.projectImageContainer {
  width: 60%;
  // padding-left: 20%;
  // padding-right: 20%;
  padding: 1rem;
  margin: auto;
}

/* CONTACT */

a > .fab.fa-linkedin, a > .fab.fa-angellist, a > .fab.fa-github, a > .fas.fa-paper-plane {
  position: relative;
  font-size: 3rem;
  color:#242337
}

a:hover > .fab.fa-linkedin, a:hover > .fab.fa-angellist, a:hover > .fab.fa-github, a:hover > .fas.fa-paper-plane {
  color: $tertiaryColor;
}

.contact-link-container {
  justify-content: space-evenly;
  display: flex;
}

.contact-resume-container {
  display: inline-block;
  margin-top: 5%;
  width: 100%;
  padding: 0 0 6rem 0;
}

.contact-resume {
  display: inline-block;
  text-decoration: none;
}

.contact-resume-text {
  font-weight: 900;
  font-size: 0.8rem;
  padding: 1rem;
  width: 15rem;
  position: relative;
  box-shadow: -10px 10px 0 transparentize($color: $primaryColor, $amount: .8);
  border: 4px solid $secondaryColor;
  text-decoration: none;

  &:hover {
    background-color: lighten($color: $backgroundColor, $amount: 35%);
    background-blend-mode: overlay;
  }
}

@include media-breakpoint-down(md) {

  .fullPage {
    padding: 1rem;
  }

  .projectImageContainer {
    width: 100%;
  }

  .projectImage {
    margin-bottom: 1rem;
    width: 100%;
  }

  .portfolioRule {
    max-width: 150px;
  }

  .aboutRule {
    max-width: 150px;
  }

  .contactRule {
    max-width: 150px;
  }


}

